fix: Align headers to left

--- a/src/Components/FeelingsLog/FeelingsLog.css
+++ b/src/Components/FeelingsLog/FeelingsLog.css
@@ -17,7 +17,8 @@
     padding: .7rem;
     border-bottom: 1px solid var(--border-color);
 }
-.feelingsLogs th {
+
+th {
     font-weight: 700;
     text-align: left;
 }
